PROJECT(hokuyo)
SET(PROJECT_VERSION 1.0)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
INCLUDE(FindPkgConfig)

pkg_check_modules(DFKI_TYPES REQUIRED "dfki-types")

INCLUDE_DIRECTORIES(${DFKI_TYPES_INCLUDE_DIRS})
LINK_DIRECTORIES(${DFKI_TYPES_LIBRARY_DIRS})

ADD_LIBRARY(hokuyo SHARED hokuyo.cc)
TARGET_LINK_LIBRARIES(hokuyo ${DFKI_TYPES_LIBS})

ADD_EXECUTABLE(hokuyo_test hokuyo_test.cc)
TARGET_LINK_LIBRARIES(hokuyo_test hokuyo)
INSTALL(TARGETS hokuyo  LIBRARY DESTINATION lib)
INSTALL(FILES hokuyo.hh DESTINATION include)

CONFIGURE_FILE(Doxyfile.in Doxyfile @ONLY)
CONFIGURE_FILE(hokuyo.pc.in hokuyo.pc @ONLY)
INSTALL(FILES ${CMAKE_BINARY_DIR}/hokuyo.pc DESTINATION lib/pkgconfig)

